# netguard-guard

./: Cargo.toml  Makefile  netguard_1.0.0-1_x86_64.ipk
.github/workflows/: build.yml
root/etc/config/: netguard
root/etc/init.d/: netguard
root/etc/netguard/: app_signatures.json
root/usr/lib/lua/luci/controller/: netguard.lua
root/usr/lib/lua/luci/view/netguard/: connections.htm  index.htm  logs.htm  settings.htm  style.css
root/www/cgi-bin/: netguard
src/: api_server.rs  app_identifier.rs  config.rs  flow_tracker.rs  history_aggregator.rs  lib.rs  main.rs  nflog_listener.rs  nft_setup.rs  nftables_counter.rs  persistence.rs  sni_parser.rs  types.rs
