[package]
name = "netguard"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
lazy_static = "1.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
bincode = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.2"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
